--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,251 @@
-# 운영체제 파일
-.DS_Store
-Thumbs.db
+# ==============================================================================
+# ACCI KPI Project .gitignore
+# ==============================================================================
 
-# 의존성 디렉토리
+# ==============================================================================
+# Dependencies
+# ==============================================================================
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# ==============================================================================
+# Build outputs
+# ==============================================================================
 dist/
 build/
+out/
+.next/
+.nuxt/
+.cache/
+.parcel-cache/
 
-# Next.js 빌드 결과물
+# ==============================================================================
+# Next.js specific
+# ==============================================================================
+# Next.js build output
 .next/
 frontend/.next/
 frontend/out/
+frontend/dist/
 
-# 환경 변수 파일
+# Next.js cache
+.next/cache/
+
+# ==============================================================================
+# Environment variables
+# ==============================================================================
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.*.local
 
-# 로그 파일
+# ==============================================================================
+# Database
+# ==============================================================================
+# PostgreSQL data directories
+postgres-data/
+postgres-data.bak/
+*.db
+*.sqlite
+*.sqlite3
+
+# ==============================================================================
+# Logs
+# ==============================================================================
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# 개발 환경 파일
-.idea/
+# ==============================================================================
+# Runtime data
+# ==============================================================================
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# ==============================================================================
+# Coverage directory used by tools like istanbul
+# ==============================================================================
+coverage/
+*.lcov
+.nyc_output/
+
+# ==============================================================================
+# Uploads and user generated content
+# ==============================================================================
+backend/uploads/
+frontend/public/uploads/
+uploads/
+temp/
+tmp/
+
+# ==============================================================================
+# IDE and Editor files
+# ==============================================================================
+# VSCode
 .vscode/
+*.code-workspace
+
+# IntelliJ IDEA
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Vim
 *.swp
 *.swo
+*~
 
-# 데이터베이스 관련
-postgres-data/
-postgres-data.bak/
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
 
-# 업로드 파일
-backend/uploads/
-
-# 기타 파일
+# Cursor AI
 .cursor/
-backend/dist/
 
-# Node.js
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-
-# IDE
-.vscode/
-.idea/
-
+# ==============================================================================
+# Operating System files
+# ==============================================================================
 # macOS
 .DS_Store
+.AppleDouble
+.LSOverride
+Icon?
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
 
-# Log files
-*.log 
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+[Dd]esktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+*.lnk
+
+# Linux
+*~
+
+# ==============================================================================
+# TypeScript
+# ==============================================================================
+*.tsbuildinfo
+.tscache/
+
+# ==============================================================================
+# ESLint
+# ==============================================================================
+.eslintcache
+
+# ==============================================================================
+# Prettier
+# ==============================================================================
+.prettierignore
+
+# ==============================================================================
+# Testing
+# ==============================================================================
+coverage/
+.nyc_output/
+.jest/
+test-results/
+playwright-report/
+test-results.xml
+
+# ==============================================================================
+# Package manager files
+# ==============================================================================
+# Yarn
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+
+# pnpm
+.pnpm-debug.log*
+
+# ==============================================================================
+# Docker
+# ==============================================================================
+# Docker volumes and data
+docker-compose.override.yml
+.dockerignore
+
+# ==============================================================================
+# Miscellaneous
+# ==============================================================================
+# Backup files
+*.bak
+*.backup
+*.old
+*.orig
+*.tmp
+
+# Archive files
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# ==============================================================================
+# Project specific
+# ==============================================================================
+# SQL dump files
+*.sql.bak
+*.dump
+
+# Documentation builds
+docs/_build/
+docs/site/
+
+# Local configuration
+local.config.js
+local.config.json
+
+# Temporary files
+.temp/
+.tmp/
+
+# Lock files (optional - uncomment if you want to ignore)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml 
