첨부파일 기능 개선

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -23,6 +23,7 @@
       "@/components/*": ["./components/*"],
       "@/styles/*": ["./styles/*"],
       "@/services/*": ["./services/*"],
+      "@/utils/*": ["./utils/*"],
       "@/backend/*": ["../backend/*"]
     }
   },
