--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only index.ts",
-    "migrate": "drizzle-kit push:pg"
+    "migrate": "drizzle-kit push"
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
