--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "drizzle-orm": "^0.44.2",
     "pg": "^8.16.0",
     "react-grid-layout": "^1.5.1"
+  },
+  "devDependencies": {
+    "@types/node": "^24.0.7"
   }
 }
