UX 개선: 재해자/물적피해 정보 입력폼 자동 생성 및 추가 버튼 스타일 통일

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only index.ts",
-    "migrate": "drizzle-kit push"
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "ts-node orm/migrate.ts",
+    "db:push": "drizzle-kit push"
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
