--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
       - ./backend:/usr/src/app             # 상대경로 바인딩 (호스트 ./backend → 컨테이너 /usr/src/app)
       - ./.env:/usr/src/app/../.env        # 루트 .env 파일을 상위 디렉토리에 마운트
       - /usr/src/app/node_modules          # node_modules 볼륨 보존
+      - uploads_data:/usr/src/app/uploads  # 업로드 파일 공유 볼륨
     networks:
       - ngnet                              # ngnet 네트워크에 연결
     ports:
@@ -77,6 +78,7 @@ services:
       - ./.env:/usr/src/app/../.env         # 루트 .env 파일을 상위 디렉토리에 마운트
       - /usr/src/app/node_modules           # node_modules 볼륨 보존
       - /usr/src/app/.next                  # .next 폴더 볼륨 추가 (Next.js 빌드 캐시)
+      - uploads_data:/usr/src/app/uploads   # 업로드 파일 공유 볼륨
     networks:
       - ngnet                              # ngnet 네트워크에 연결
     ports:
@@ -85,3 +87,4 @@ services:
 
 volumes:
   pgdata: {}                              # PostgreSQL 데이터 영속성을 위한 volume 정의
+  uploads_data: {}                        # 업로드 파일 공유를 위한 volume 정의
