--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-datepicker": "^6.2.0",
     "axios": "^1.6.8",
     "dotenv": "^16.5.0",
     "next": "^15.3.3",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "uuid": "^11.1.0"
