feat: 한국 표준시 기반 실시간 시간 관리 및 효율적 분단위 UI 갱신 구현\n\n- 서버는 UTC만 내려주고 프론트에서 Asia/Seoul로 변환\n- useServerTime 훅으로 실시간 시간값 활용 가능\n- 설정페이지 시간표시 분단위로 최적화\n- tsconfig 경로 매핑 추가

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -24,6 +24,7 @@
       "@/styles/*": ["./styles/*"],
       "@/services/*": ["./services/*"],
       "@/utils/*": ["./utils/*"],
+      "@/hooks/*": ["./hooks/*"],
       "@/backend/*": ["../backend/*"]
     }
   },
