--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@types/react-grid-layout": "^1.3.5",
     "drizzle-orm": "^0.44.2",
+    "express-list-endpoints": "^7.1.1",
     "pg": "^8.16.0",
     "react-grid-layout": "^1.5.1"
   },
