--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.6.8",
     "dotenv": "^16.5.0",
