--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@types/react-grid-layout": "^1.3.5",
     "drizzle-orm": "^0.44.2",
     "express-list-endpoints": "^7.1.1",
