--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
+    "recharts": "^3.1.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
